--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("https://res.cloudinary.com/djiluk8fd/image/upload/v1627584357/background-alt_ufohzh.jpg");
   backdrop-filter: blur(5px);
+  /* height: 125vh; */
 }
 
 body::-webkit-scrollbar {
